first version of endpoints login and stats working. some documentation added